# obsidian-github-formatter

./: .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
showcase/: .ogf-config.yaml
showcase/foo/: foo.md
src/obsidian_github_formatter/: .pre-commit-config.yaml  __init__.py  bash_utils.py  cache.py  config.py  errors.py  files.py  index.py  links.py  links_hook.py  markdown.py  precommit_hook_markdown.py  repair_wikilinks_hook.py  repository.py
tests/: __init__.py  conftest.py  test_config.py  test_index.py  test_links.py  test_markdown.py  test_package.py  test_repair_wikilinks.py  test_repository.py
tests/stub/foo/: foo.md
